--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.0.1",
+    "graphql-request": "^3.6.1",
     "next": "^12.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
