Connect sanity to client

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@/styles/*": ["src/styles/*"],
       "@/types": ["src/types"],
       "@/types/*": ["src/types/*"],
-      "@/utils/*": ["src/utils/*"],
+      "@/utils": ["src/utils"],
       "@/test/*": ["src/test/*"]
     }
   },
