--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sanity:start": "cd irrational && sanity start -p 3333"
   },
   "dependencies": {
+    "@sanity/client": "^2.21.10",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
     "gsap": "^3.8.0",
