--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "semi": true,
-  "trailingComma": "es5",
-  "singleQuote": false,
-  "printWidth": 90,
+  "endOfLine": "auto",
+  "printWidth": 80,
   "tabWidth": 2,
-  "useTabs": false
+  "trailingComma": "es5"
 }
