--- a/gubbins/package.json
+++ b/gubbins/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "irrational",
+  "name": "gubbins",
   "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
-  "author": "Shawn Sheehan <shawnmichaelsheehan@gmail.com>",
+  "author": "Shawn Sheehan <shawnjsx@gmail.com>",
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
@@ -14,12 +14,12 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.21.10",
-    "@sanity/core": "^2.21.11",
-    "@sanity/default-layout": "^2.21.10",
-    "@sanity/default-login": "^2.21.10",
-    "@sanity/desk-tool": "^2.21.10",
-    "@sanity/vision": "^2.21.10",
+    "@sanity/base": "^2.25.0",
+    "@sanity/core": "^2.25.0",
+    "@sanity/default-layout": "^2.25.0",
+    "@sanity/default-login": "^2.24.1",
+    "@sanity/desk-tool": "^2.25.0",
+    "@sanity/vision": "^2.25.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
@@ -28,6 +28,6 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git@github.com:robotjeans/robotjeans-blog.git"
+    "url": "git@github.com:robotjeans/gubbins-blog-template.git"
   }
 }
