--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "gsap": "^3.8.0",
     "next": "^12.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
     "@types/react": "^17.0.34",
-    "@types/styled-components": "^5.1.15",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.3",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15",
     "typescript": "^4.4.4"
   }
 }
