--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,18 +16,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["src/components/*"],
-      "@/contexts/*": ["src/contexts/*"],
-      "@/contexts": ["src/contexts"],
-      "@/hooks": ["src/hooks"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/services": ["src/services"],
-      "@/services/*": ["src/services/*"],
-      "@/styles/*": ["src/styles/*"],
-      "@/types": ["src/types"],
-      "@/types/*": ["src/types/*"],
-      "@/utils": ["src/utils"],
-      "@/test/*": ["src/test/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
