--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "sanity:start": "cd irrational && sanity start -p 3333"
+    "sanity:start": "cd gubbins && sanity start -p 3333",
+    "sanity:install": "cd gubbins && yarn install"
   },
   "dependencies": {
-    "@sanity/client": "^2.21.10",
     "graphql": "^16.0.1",
     "graphql-request": "^3.6.1",
-    "gsap": "^3.8.0",
     "next": "^12.0.3",
+    "next-sanity": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/gsap": "^3.0.0",
     "@types/react": "^17.0.34",
     "autoprefixer": "^10.4.2",
     "eslint": "8.2.0",
